--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="Telyu.jpg" class="d-block w-100" alt="FotoTelyu" style="height: 600px">
+              <img src="image/Telyu.jpg" class="d-block w-100" alt="FotoTelyu" style="height: 600px">
               <div class="carousel-caption">
                 <h2>WELCOME</h2>
                 <p style="height: 10vh; font-size: x-large;">Selamat Datang di Landing Page MBC Lab</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="Logo.jpg" class="d-block w-100" alt="Logo" style="height: 600px">
+              <img src="image/Logo.jpg" class="d-block w-100" alt="Logo" style="height: 600px">
               <div class="carousel-caption">
                 <h3>MBC LABORATORY</h3>
                 <p style="height: 20vh; font-size: large;">Pusat riset Teknologi dan Konsultan Cyber Security, Big Data, dan Multimedia Application (Game Technology dan GIS)</p>
@@ -103,7 +103,7 @@
         <div class="row pt-6 gx-6 gy-4 mt-4 text-dark ">
           <div class="col-lg-6 mt-5">
             <div class="card">
-              <img src="/cyber.jpg" class="card-img-top" alt="...">
+              <img src="image/cyber.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Cyber Security</h5>
                 <p class="card-text" style="text-align: justify;">Divisi yang bertanggung jawab atas perlindungan sistem informasi, jaringan, dan data dari ancaman digital seperti serangan siber, malware, dan hacking. Divisi ini memiliki peran dalam menjaga integritas, kerahasiaan, dan ketersediaan informasi sensitif.</p>
@@ -112,7 +112,7 @@
           </div>
           <div class="col-lg-6 mt-5">
             <div class="card">
-              <img src="/bigdata.jpg" class="card-img-top" alt="...">
+              <img src="image/bigdata.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Big Data</h5>
                 <p class="card-text" style="text-align: justify;">Divisi yang bertanggungjawab dalam mengumpulkan data, memproses, dan menganalisis data besar untuk mengidentifikasi pola, tren, dengan menggunakan berbagai alat, teknik, dan metodologi untuk mengelola data yang dapat membantu dalam pengambilan keputusan strategis.</p>
@@ -121,7 +121,7 @@
           </div>
           <div class="col-lg-6 mt-5">
             <div class="card">
-              <img src="/gis.jpg" class="card-img-top" alt="...">
+              <img src="image/gis.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Geographic Information System</h5>
                 <p class="card-text" style="text-align: justify;">Divisi ini bertanggungjawab dalam perancangan sistem informasi pemetaan berbasis komputer yang digunakan untuk memasukkan, mengolah, menganalisis dan menghasilkan data bereferensi geografis atau data geospatial, untuk pengambilan keputusan dalam perencanaan dan pengelolaan penggunaan sumber daya alam, lingkungan, fasilitas kota, dan pelayanan umum lainnya. Teknologi GIS juga dapat digunakan untuk investigasi ilmiah, pengelolaan sumber daya, kartografi dan perencanaan rute.</p>
@@ -130,7 +130,7 @@
           </div>
           <div class="col-lg-6 mt-5">
             <div class="card">
-              <img src="/game.png" class="card-img-top" alt="...">
+              <img src="image/game.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Game Technology</h5>
                 <p class="card-text" style="text-align: justify;">Divisi yang yang melibatkan pengembangan, desain, dan implementasi perangkat lunak dan perangkat keras untuk menciptakan pengalaman bermain yang interaktif dan imersif. Ini mencakup berbagai aspek teknis dan kreatif yang berkontribusi pada pembuatan video game, termasuk pengembangan game, pemrograman, desain grafis, animasi, suara, dan interaksi pengguna. Ada beberapa kategori dalam game Technology antara lain, game development, game design, operations, dan market analysis.</p>
@@ -172,7 +172,7 @@
           <h4 class="display-3 mt-3" style="height: 90px; font-size: xxx-large;" id="tentang"><strong>About</strong></h4>
           <div class="row pt-4 gx-4 gy-4">
             <div class="col-md-4 text-center tim">
-              <img src="/img.jpg" class="rounded-circle mb-3"/>
+              <img src="image/img.jpg" class="rounded-circle mb-3"/>
               <h3>Guntur Wahyu Laksono</h3>
               <p>S1 Teknik Telekomunikasi</p>
             </div>
@@ -194,20 +194,20 @@
       </div>
 
       <!--Sosmed-->
-      <div class="container-fluid client pt-5 pb-5 bg-light">
+      <div class="container-fluid client pt-5 pb-5 " style="background-color: rgb(219, 219, 219);">
         <div class="container text-center">
           <div class="row pt-4 gx-4 gy-4">
             <div class="col">
-              <img src="/fesbuk.png"/>
+              <img src="image/fesbuk.png"/>
             </div>
             <div class="col">
-              <img src="/lin.png"/>
+              <img src="image/lin.png"/>
             </div>
             <div class="col">
-              <img src="/gmail.png"/>
+              <img src="image/gmail.png"/>
             </div>
             <div class="col">
-              <img src="/ig.png"/>
+              <img src="image/insta.png"/>
             </div>
           </div>
         </div>
